Prefer Integer.valueOf to new Integer. Make fields final